implement stellar.toml download
